Make the Stage B error use an and comparator, not an or

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,6 @@ tmp/
 presets/
 presets/*
 autocomplete/csv/*.csv
+util/clip_model/model.safetensors
+util/tag_similarity_cloud_umap.png
+util/tag_list.conf
